install section complet

--- a/index.html
+++ b/index.html
@@ -104,6 +104,27 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="install_section_contener">
+        <div class="text_contner_install">
+          <h2 class="text_install_tiel">
+            Play Instantly,
+          </h2>
+          <h2 class="text_nistall_titel_all">No Downloads</h2>
+          <h2 class="text_nistall_titel_all">No Installs.</h2>
+          <p class="text_isnstall_descoption">Play games online for free without downloading. Just click the Play button
+            and play instantly in your browser.</p>
+        </div>
+        <div class="img_section_contner">
+          <div class="install_img_section">
+            <img src="image/Rectangle 55.png" alt="">
+          </div>
+          <div class="install_smolle_img">
+            <img src="image/Rectangle 66.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
