career section comlet

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="contener">
         <div class="video_gmear">
           <div class="video_section_tex">
-            <h2 class="video_section_titel"> <span class="games_titel_color">Online Games</span> Funny Videos</h2>
+            <h2 class="video_section_titel"> Online Games <span class="games_titel_color">Funny Videos</span> </h2>
             <p class="vided_section_descoption">A Collection of Hilarious Videos to Brighten Your Day</p>
           </div>
           <div class="video_img_section">
@@ -122,6 +122,64 @@
           <div class="install_smolle_img">
             <img src="image/Rectangle 66.png" alt="">
           </div>
+        </div>
+      </div>
+    </section>
+    <div class="contener">
+      <div class="play_game_section">
+        <div class="play_gme_img_areya">
+          <div class="play_had_img"><img src="image/Rectangle 67.png" alt=""></div>
+          <div class="play_down_img"><img src="image/Rectangle 78.png" alt=""></div>
+        </div>
+        <div class="played_text_areya">
+          <h2 class="played_games_titel"><span class="play_games_online">Play Games Online</span> Anywhere, Anytime!
+          </h2>
+          <p class="played_game_descoption">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play
+            your favorite games online for free, any
+            time, anywhere , on any device.</p>
+        </div>
+      </div>
+
+    </div>
+    <section id="carrer_all_section">
+      <div class="career_section">
+        <div class="career_text_areya">
+          <div class="carear_text">
+            <h2 class="career_text_titel">
+              Careers
+            </h2>
+            <p class="carer_text_descoption">Gamer is driven to create the best and most fun games for our millions of
+              players all around the world, and we,re always
+              on the lookout for more top talent to join our growing team. If you,d like to help us make great games and
+              be a part of
+              Gamers bright future, we,d love to hear from you.</p>
+            <div class="career_list_areya">
+              <div class="career_list_titel">
+                <ul>
+                  <li>Multimedia Artist +</li>
+                  <li>Data Engineer +</li>
+                  <li>Adroid Engineer +</li>
+                  <li>Server Developer +</li>
+                  <li>Group Financial Accountant +</li>
+                  <li>Senior User Acuisition Specialist +</li>
+                </ul>
+              </div>
+              <div class="career_list_item">
+                <ul>
+                  <li>Lisbon, Portugal</li>
+                  <li>Lisbon, Portugal</li>
+                  <li>Zoetermeer, Netherlands</li>
+                  <li>Lisbon, Portugal</li>
+                  <li>London, United Kingdom</li>
+                  <li>Lisbon, Portuga</li>
+                </ul>
+              </div>
+            </div>
+            <button class="positons_btn">See all positions</button>
+          </div>
+        </div>
+        <div class="career_img_section">
+          <img src="image/Group 65.png" alt="">
         </div>
       </div>
     </section>
