player section is completed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="responce.css">
 </head>
 
 <body>
@@ -180,6 +181,48 @@
         </div>
         <div class="career_img_section">
           <img src="image/Group 65.png" alt="">
+        </div>
+      </div>
+    </section>
+
+    <section id="gamer_palyer_all_section">
+      <div class="gamer_player_section">
+        <div class="gamer_player_list">
+          <img src="image/Rectangle 11.png" alt="">
+          <h2 class="gamer_player_titel">Action Games</h2>
+        </div>
+        <div class="gamer_player_list">
+          <img src="image/Rectangle 12.png" alt="">
+          <h2 class="gamer_player_titel">Adventure Games</h2>
+        </div>
+        <div class="gamer_player_list">
+          <img src="image/Rectangle 13.png" alt="">
+          <h2 class="gamer_player_titel">Arcade Games</h2>
+        </div>
+        <div class="gamer_player_list">
+          <img src="image/Rectangle 14.png" alt="">
+          <h2 class="gamer_player_titel">Educational Games</h2>
+        </div>
+        <div class="gamer_player_list">
+          <img src="image/Rectangle 15.png" alt="">
+          <h2 class="gamer_player_titel">Word Games</h2>
+        </div>
+        <div class="gamer_player_list">
+          <img src="image/Rectangle 16.png" alt="">
+          <h2 class="gamer_player_titel">Role Palying Games</h2>
+        </div>
+        <div class="gamer_player_list">
+          <img src="image/Rectangle 17.png" alt="">
+          <h2 class="gamer_player_titel">Music & Audio Games</h2>
+        </div>
+        <div class="gamer_player_list">
+          <img src="image/Rectangle 18.png" alt="">
+          <h2 class="gamer_player_titel">Puzzle Games</h2>
+        </div>
+        <div class="gamer_player_list">
+          <img src="image/Rectangle 19.png" alt="">
+
+          <h2 class="gamer_player_titel"> Strategy Games</h2>
         </div>
       </div>
     </section>
