footer section is done

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="responce.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -227,7 +229,42 @@
       </div>
     </section>
   </main>
+
+
   <footer>
+    <div class="footer_header_div">
+      <div class="footer_titel_div">
+        <img src="image/Frame.png" alt="">
+        <h1 class="nav_head_titel color_boxed"><span class="gamer_styel">G</span>amer</h1>
+
+      </div>
+      <div class="footer_list">
+        <h2 class="footer_list_item">Our Story</h2>
+        <h2 class="footer_list_item">Games</h2>
+        <h2 class="footer_list_item">Web Games</h2>
+        <h2 class="footer_list_item">Careers</h2>
+        <h2 class="footer_list_item">Support</h2>
+        <h2 class="footer_list_item">My Account</h2>
+      </div>
+
+      <div class="footer_icon_areya">
+        <div class="footer_icon"><i class="fa-brands fa-twitter"></i></div>
+        <div class="footer_icon"><i class="fa-brands fa-facebook"></i></div>
+        <div class="footer_icon"><i class="fa-brands fa-youtube"></i></div>
+        <div class="footer_icon"><i class="fa-brands fa-linkedin"></i></div>
+        <div class="footer_icon"><i class="fa-brands fa-instagram"></i></div>
+        <div class="footer_icon"> <i class="fa-brands fa-apple"></i></div>
+      </div>
+      <div class="footer-descoption">
+        <p class="footer_descoption_titel">Terms and Conditions</p>
+        <p class="footer_descoption_titel">Privacy Policy</p>
+        <p class="footer_descoption_titel">Cookie Policy</p>
+        <p class="footer_descoption_titel">Privacy Settings</p>
+      </div>
+      <div class="footer_addresh">
+        <p class="footer_addresh_text">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+      </div>
+    </div>
 
   </footer>
 </body>
